--- a/_sass/config.scss
+++ b/_sass/config.scss
@@ -7,6 +7,7 @@ $code-font: "Andale Mono";
 
 /* sizes */
 $content-width: 650px;
+$mobile-width-trigger: 600px;
 $banner-width: 960px;
 $banner-height: 240px;
 
